Align cards correctly

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -32,6 +32,7 @@ body {
   background: royalblue;
   box-sizing: border-box;
   min-width: 300px;
+  padding: 16px;
   
  
   
@@ -44,38 +45,50 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 48px;
+  flex: 1;
+  
+   
+  
+  
 }
 
 ul {
   list-style-type: none;
+  
 }
 
 a {
   text-decoration: none;
   color: #eee;
+  font-size: 24px;
+  text-align: left;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
-  width: 800px;
+  
+  gap: 40px;
+  margin: 40px;
+  
+  
+
+  
+  
 
 }
 
 .cards1,
 .cards2 {
   display: flex;
-  
-
-  
-  
-  
-  
+  column-gap: 40px;  
 }
 
 .sidebar-cards {
   display: flex;
   flex: 1;
+  
   
   
 }
